# ex2

./: .gitignore.txt  Ability.h  CMakeLists.txt  HashTable.h  Player.cpp  Player.h  RankTree.h  Team.cpp  Team.h  UnionFind.cpp  UnionFind.h  main.cpp  rankTreeTester.cpp  worldcup23a2.cpp  worldcup23a2.h
